# lenixie

./: .gitignore  CMakeLists.txt  CMakePresets.json  Version.h.in  platformio.ini
Core/: CMakeLists.txt  stm32f1xx_hal_msp.c
Firmware/: CMakeLists.txt  WifiCredentials.h  WifiCredentials_reference.h  main.cpp
Firmware/Clock/: DateTime.cpp  DateTime.h  NTPRequest.cpp  NTPRequest.h  RTClock.cpp  RTClock.h
Firmware/ESP8266/: ESP8266.cpp  ESP8266.h  EspAtCommand.h  Wifi.cpp  Wifi.h
Firmware/Indicator/: BCDDecoder.h  DynamicIndication.cpp  DynamicIndication.h
Firmware/PanelClient/: CMakeLists.txt  DateTimeSession.cpp  DateTimeSession.h  LogSession.cpp  LogSession.h  MessageSession.h  NetworkSession.cpp  NetworkSession.h  NtpSession.cpp  NtpSession.h  PanelClient.cpp  PanelClient.h  PanelCommand.h  PanelMessage.h
Firmware/Settings/: CMakeLists.txt  Settings.cpp  Settings.h  SettingsData.cpp  SettingsData.h
Firmware/Usb/: CustomHid.cpp  CustomHid.h  UsbDevice.cpp  UsbDevice.h  UsbDeviceDescriptor.h
Libs/: CMakeLists.txt
Libs/CMSIS/: CMakeLists.txt
Libs/CustomHID/: CMakeLists.txt  UsbCustomHid.cpp  UsbCustomHid.h
Libs/CustomHID/Core/: DataAlign.h  UsbClass.h  UsbDescriptor.h  UsbDriver.h  UsbEndpoint.cpp  UsbEndpoint.h  UsbHandle.cpp  UsbHandle.h  UsbSetupRequest.cpp  UsbSetupRequest.h  usbd_def.h
Libs/DataPacket/: CMakeLists.txt  DataPacket.cpp  DataPacket.h
Libs/HAL/: CMakeLists.txt  stm32f1xx_hal_conf.h
Libs/Json/: CMakeLists.txt  JsonObject.cpp  JsonObject.h
Libs/Json/lwjson/: CMakeLists.txt  lwjson.c  lwjson.h  lwjson_debug.c  lwjson_stream.c
Libs/Logger/: CMakeLists.txt  Logger.h  RingBuffer.h
Libs/SString/: CMakeLists.txt  SString.h
Tests/: CMakeLists.txt  main.cpp  test_DataPacket.cpp  test_SString.cpp
cmake/: gcc-arm-none-eabi.cmake
src/: BCDDecoder.cpp  BCDDecoder.h  CMakeLists.txt  DynamicIndication.cpp  DynamicIndication.h  ESP8266.cpp  ESP8266.h  ESP9266.cpp  ESP9266.h  LogDump.cpp  LogDump.h  MonitorCommand.h  NTPHandle.cpp  RTClock.cpp  RTClock.h  SString.h  Uart.cpp  Uart.h  WifiCredentials.h  WifiCredentials_reference.h  main.cpp
src/Clock/: DateTime.cpp  DateTime.h  NTPHandle.cpp  NTPHandle.h  NTPRequest.cpp  NTPRequest.h  RTClock.cpp  RTClock.h
src/ESP8266/: ESP8266.cpp  ESP8266.h  EspAtCommand.cpp  EspAtCommand.h
src/HAL/: stm32f1xx_hal_msp.c
src/Indicator/: BCDDecoder.cpp  BCDDecoder.h  DynamicIndication.cpp  DynamicIndication.h
src/Misc/: Logger.cpp  Logger.h  SString.h  StringBuffer.h
src/PanelClient/: CMakeLists.txt  LogSession.cpp  LogSession.h  PanelClient.cpp  PanelClient.h
src/SMProtocol/: Interface.h  SMProtocol.cpp  SMProtocol.h
src/Usb/: CustomHid.cpp  UsbDevice.cpp  UsbDevice.h  UsbDeviceDescriptor.cpp  UsbDeviceDescriptor.h  UsbDriverF103.cpp  UsbDriverF103.h
